dataset/local/df_validate_base_image_tag/resource.yaml
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: good-dockerfile
Stages:
  - From:
      Image: "ubuntu:22.04"
    Commands: []
---
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: bad-dockerfile
Stages:
  - From:
      Image: "ubuntu"
    Commands: []
