dataset/local/df_validate_base_image_tag/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validate-base-image-tag
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: validate-base-image-tag
    kind: Dockerfile
    resources:
      - good-dockerfile
    result: pass
  - policy: validate-base-image-tag
    kind: Dockerfile
    resources:
      - bad-dockerfile
    result: fail
